fixed the spacing between letters

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,7 @@ body {
 .game-section {
     display: none;
     flex-direction: column;
+    align-content: center;
 }
 .results {
     font-size: 30px;
